Make sure form elements are not cut off horizontally

--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -245,7 +245,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 
 #wpo-wcpdf-preview-wrapper .sidebar > form {
 	background: white;
-	overflow: hidden;
+	overflow: visible;
 	padding: 0;
 	margin-left: 2em;
 	box-sizing: border-box;
